assets/dananke/scss/base.scss
/* ... */
/* On some OS fonts are rendered smaller on large screens, even without double
   or higher density displays. Also one tends to sit further away from the
   screen when it large.
 */
@media screen and (max-resolution: 96dpi) and (min-width: 1220px) {
    .whole-body, body, html {
        font-size: calc(var(--base-font-size, 16px) * 1.25);
     }
}

/* On some OS fonts are rendered smaller on large screens, even without double
   or higher density displays. Also one tends to sit further away from the
   screen when it large. Larger screens are worse.
 */
@media screen and (max-resolution: 96dpi) and (min-width: 2047px) {
    .whole-body, body, html {
        font-size: calc(var(--base-font-size, 16px) * 1.33);
     }
}

*, .content-box, hr {
    box-sizing: content-box;
}

.border-box, a, article, aside, blockquote, body, code, dd, div, dl, dt, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, html, input[type=email], input[type=number], input[type=password], input[type=tel], input[type=text], input[type=url], legend, li, main, nav, object, ol, p, pre, section, table, td, textarea, th, tr, ul {
    box-sizing: border-box;
}

* {
    margin-top: 0;
    padding-top: 0;
}

input, textarea, button {
    font-size: 1rem;
}

a, code {
    overflow-wrap: break-word;
    word-break: normal;
}

pre, pre code {
    overflow-wrap: break-word;
    word-break: break-all;
}

pre, .pre {
    white-space: pre-wrap;
}

pre code {
  display: block;
  white-space: pre-wrap;
  line-height: 2;
}

pre {
  background-color: var(--pre-code-bg-colour, #000);
  color: var(--pre-code-colour, #f8f8f2);

  hyphens: none;
  position: relative;
}

p, li {
    & > code {
        background-color: var(--p-code-bg-colour, #000);
        color: var(--p-code-colour, #f8f8f2);
        padding-bottom: 2px;
        padding-left: 6px;
        padding-right: 6px;
        padding-top: 2px;
    }
}

.main-block li pre {
    min-width: auto;
}

/* We want titles to be title size but slightly smaller, so 'em' *not* 'rem' */
code {
    font-size: .875em;
}

blockquote {
    border-left: solid 4px;
    padding-bottom: .5rem;
    padding-left: 1rem;
    padding-right: 1em;
    padding-top: .5rem;

    & p {
        margin-bottom: 0;
    }
}

figure figcaption {
    margin-bottom: 1.5rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;

    & h2, span {
        font-style: italic;
    }

    & h2 {
        font-size: 1.25rem;
    }
}

.main-block .highlight {
    min-width: min-content;
}

.main-block pre {
    background-color: var(--pre-code-bg-colour, #000);
    color: var(--pre-code-colour, #f8f8f2);
    min-width: min-content;
    padding: .4rem;
    white-space: pre-wrap;
}

.main-block .highlight > pre {
    min-width: min-content;
    white-space: pre-wrap;
}

.main-block pre > code {
    min-width: min-content;
}

.main-block .highlight > pre > code {
    margin: 0;
    min-width: min-content;
    padding: 0;
}

.main-block {
    display: block;
    padding-bottom: 0;
}

.nav-buttons-bar {
    font-size: 1.25rem;
    overflow: visible;
    padding-left: 1rem;
    padding-right: 1rem;
    width: 100%;
}

.main-navigation {
    background-color: var(--main-nav-bg-colour, #111);
}

.main-navigation {
    display: flex;
    flex: 1 1 100%;
    flex-direction: column;
    justify-content: space-between;
    padding: 0;
    width: 100%;

    @include center-block;
}

.main-article .list-buttons-bar {
    flex: 1 1 100%;
}

.nav-buttons-bar .list-buttons-bar {
    align-items: center;
    align-content: center;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    list-style: none;
    margin-left: 0;
    margin-right: 0;
    padding: 0;

    @include center-block;
}

.main-nav-details > summary {
    background-color: var(--main-nav-bg-colour, #111);
    list-style-image: var(--hamburger-icon);
    height: 28px;
    left: 0;
    top: 0;
    padding: 10px; // So size is 48px == minimum tap point size
    position: relative;
    z-index: 3;
}

.main-nav-details .main-navigation-mobile {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    position: absolute;
    top: 48px;
    visibility: visible;
    z-index: -1;

    @include center-block;
}

.main-nav-details .main-navigation-mobile,
.site-footer {
    background-color: var(--main-nav-bg-colour, #111);
    width: 100%;
}

.main-nav-details[open] .main-navigation-mobile {
    z-index: 2;
}

.main-nav-details + .main-navigation {
    display: none;
    visibility: hidden;
    z-index: -1;
}

.nav-menu-item {
    color: var(--main-nav-fg-colour, #ddd);
    display: block;
    flex: 1 0 min-content;
    list-style: none;
    text-align: center;

    & .nav-link {
        &:focus,
        &:active,
        &:hover {
            background-color: var(--main-nav-fg-colour, #ddd);
            color: var(--main-nav-bg-colour, #111);
        }
    }

    & .social-title-link {
        &:focus,
        &:active,
        &:hover {
            background-color: var(--social-hover-bg-colour, #2a2a2a);
        }
    }
}

.nav-link {
    line-height: 2;
    text-decoration: none;
}

.nav-link:focus,
.nav-link:active,
.nav-link:hover {
    text-decoration: underline;
}

.site-image {
    height: 100px;
    max-width: 300px;
    vertical-align: middle;
}

.main-navigation,
.main-navigation-mobile {
    & .dananke-social-list-item {
        & .dananke-social-link {
            align-items: center;
            display: flex;
            justify-content: center;
            margin-left: auto;
            margin-right: auto;
        }
    }
}

.nav-menu-list {
    align-items: center;
    align-content: center;
    display: flex;
    flex: 1 1 100%;
    flex-flow: row wrap;
    justify-content: space-between;
    margin-bottom: 0;
    padding-left: 0;
    text-align: center;
}

.title-menu-list {
    margin-bottom: 1rem;
}
/* ... */

